k8s-kustomize-aws/Base/frontend-deployment/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todoapp-ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    # alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:eu-north-1:684854030943:certificate/b3d07d4f-55a0-49ab-856f-1aeb8e1c210c
    # *.mycloudlab.website certificate
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:eu-north-1:684854030943:certificate/748b3289-6e7a-414b-a361-81b9d071cac0
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}, {"HTTPS":443}]'


spec:
  ingressClassName: alb
  rules:
  - host: todoapp.mycloudlab.website
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: react-svc
            port: 
              number: 80
      - path: "/api"
        pathType: Prefix
        backend:
          service:
            name: flask-svc
            port: 
              number: 5000
